# PingPong

./: .gitattributes  CMakeLists.txt  README.md
.devcontainer/: Dockerfile  devcontainer.json
.devcontainer/scripts/: container-set.sh  onCreate.sh  postStart.sh
.github/workflows/: build.yaml  code_generator.yaml
conf/: config.json
examples/commonAPI/pingpong/: CMakeLists.txt  commonapi.ini
examples/commonAPI/pingpong/fidl/: pong.fdepl  pong.fidl
examples/commonAPI/pingpong/include/: pongStubImpl.hpp
examples/commonAPI/pingpong/src/: ping.cpp  pong.cpp  pongStubImpl.cpp
examples/commonAPI/pingpong/src-gen/core/v1/pingpong/: Pong.hpp  PongProxy.hpp  PongProxyBase.hpp  PongStub.hpp  PongStubDefault.hpp
examples/commonAPI/pingpong/src-gen/someip/v1/pingpong/: PongSomeIPDeployment.cpp  PongSomeIPDeployment.hpp  PongSomeIPProxy.cpp  PongSomeIPProxy.hpp  PongSomeIPStubAdapter.cpp  PongSomeIPStubAdapter.hpp
examples/pingpong/src/: ping.cpp  pong.cpp
examples/vsomeip/pingpong/: CMakeLists.txt
examples/vsomeip/pingpong/include/: defines.hpp  ping.hpp  pong.hpp
examples/vsomeip/pingpong/src/: ping.cpp  pong.cpp
src/: main.cpp
